Funktion Start- und Stopbutton Scrollbar und Mouseover repariert

--- a/webseite/startbootstrap-grayscale-gh-pages/startbootstrap-grayscale-gh-pages/css/mehrajaxtest.css
+++ b/webseite/startbootstrap-grayscale-gh-pages/startbootstrap-grayscale-gh-pages/css/mehrajaxtest.css
@@ -9,7 +9,7 @@
 #content{
    height: 400px;
    width: 100%;
-   border: 1px solid transparent;
+   border: 1px solid red;
 }
 
 .bubbleContainer{
@@ -33,8 +33,7 @@
     float: left;
 }
 
-#bubbleContainer{
-}
+
 
 .coloredBubble{
     float: left;
